<resources>
    <string name="app_name">Flafla</string>
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="specification">Specification</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="add_to_bag">Add to Bag</string>
    <string name="product_id">PRODUCT_ID</string>
    <string name="products_collection">products</string>
    <string name="name_document_snapshot">name</string>
    <string name="price_document_snapshot">price</string>
    <string name="description_document_snapshot">description</string>
    <string name="images_document_snapshot">images</string>
    <string name="specifications_document_snapshot">specifications</string>
    <string name="terms_and_conditions_document_snapshot">termsAndConditions</string>
    <string name="products_document">products</string>
    <string name="DOC_ARTICLES">articles</string>
    <string name="button">Button</string>
    <string name="modal">Modal</string>
    <string name="back">Back</string>
    <string name="chevron_left_image">Chevron Left Image</string>
    <string name="enter_your_id_or_email_address">Enter your ID or email address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="enter_as_a_guest">Enter as a guest</string>
    <string name="create_an_account">Create an account</string>
    <string name="find_password">Find Password</string>
    <string name="find_id">Find ID</string>
    <string name="flafla_logo">Flafla Logo</string>
    <string name="log_out">Log Out</string>
    <string name="profile_image">Profile Image</string>
    <string name="banner_image">Banner Image</string>
    <string name="article_image">Article Image</string>
    <string name="article_title">Article Title</string>
    <string name="article_author">Article Author</string>
    <string name="article_content">Article Content</string>
    <string name="article_date">Article Date</string>
    <string name="blog">Blog</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="product_name">Product Name</string>
    <string name="_99">$99</string>
    <string name="product_image">Product Image</string>
    <string name="search_button">Search Button</string>
    <string name="close_search">Close Search</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="catalogue">Catalogue</string>
    <string name="close">Close</string>
    <string name="shop">Shop</string>
    <string name="people">People</string>
    <string name="contact">Contact</string>
    <string name="toggle_icon">Toggle icon</string>
    <string name="category">Category</string>
    <string name="answer">Answer</string>
    <string name="question">Question</string>
    <string name="shop_category">Shop, CATEGORY</string>
    <string name="description">Description</string>
    <string name="toggle_specification_button">Toggle Specification Button</string>
    <string name="toggle_terms_and_condition_button">Toggle Terms and Condition Button</string>
    <string name="category_name">Category Name</string>
    <string name="phone">Phone</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="email_support">support@flafla.com</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone_value">+52 55 1234 5678</string>
    <string name="weekday_hours">Weekday Hours</string>
    <string name="saturday_hours">Saturday Hours</string>
    <string name="sunday_hours">Sunday Hours</string>
    <string name="author">Author</string>
    <string name="rating">Rating</string>
    <string name="content">Content</string>
    <string name="date">Date</string>
    <string name="author_avatar">Author Avatar</string>
    <string name="customer_reviews">Customer Reviews</string>
    <string name="checkout">Checkout</string>
    <string name="owner">Owner</string>
    <string name="thanks_for_your_order">Thanks for your order</string>
    <string name="your_order_is">Your order is #</string>
    <string name="status">Status</string>
    <string name="feedback">Feedback</string>
    <string name="total">Total:</string>
    <string name="shipping">Shipping:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="item">Item</string>
    <string name="quantity">Qty:</string>
    <string name="price_symbol">$</string>
    <string name="pending_instructions">We\'re processing your order now. We\'ll send you an email once it\'s dispatched containing tracking details.</string>
    <string name="shipped_instructions">Your order is shipped. We\'ve sent tracking details to your email.</string>
    <string name="delivered_instructions">Your order was delivered. Enjoy it!</string>
    <string name="order">Order</string>
    <string name="orders">Orders</string>
</resources>