<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/folded_ivory"
    tools:context=".activities.ContactActivity">

    <LinearLayout
        android:orientation="vertical"
        android:paddingVertical="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/back"
            layout="@layout/back_button" />

        <LinearLayout
            android:orientation="vertical"
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/brown"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opening_hours"
                android:textStyle="bold"
                android:textColor="@color/brown" />

            <TextView
                android:id="@+id/weekdays_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekday_hours"
                android:textColor="@color/brown_light" />

            <TextView
                android:id="@+id/saturday_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday_hours"
                android:textColor="@color/brown_light" />

            <TextView
                android:id="@+id/sunday_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday_hours"
                android:textColor="@color/brown_light"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textStyle="bold"
                android:textColor="@color/brown" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autoLink="phone"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:padding="8dp"
                android:text="@string/phone_value"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_support"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:autoLink="phone"
                android:linksClickable="true"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:autoLink="phone"
                android:linksClickable="true"
                android:layout_marginBottom="16dp" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="250dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
